--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CMS.js</title>
-    <meta name="description" content="The JavaScript Site Generator">
-    <meta name="author" content="">
+    <meta name="description" content="Knowlege Base Alex">
+    <meta name="author" content="Alex Ortner">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
     <link rel="stylesheet" href="./css/animations.css">
     <link rel="stylesheet" href="./css/poole.min.css">
@@ -22,10 +22,10 @@
       <header class="masthead">
         <h3 class="masthead-title">
         <a href="#" class="sitename" title="Home">
-          CMS.js
+          Alex Ortner
         </a>
         <small class="tagline">
-          The Javascript Site Generator
+          Big Data Wiki
         </small>
         </h3>
         <!-- Navigation -->
